tests/paczka1/small_fuzzy/39122903.err
Error in line 1: sz12 S533 95,40
Error in line 4: sz12 S533 -1,0
